--- a/sales_prediction.ipynb
+++ b/sales_prediction.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPXWVy3/uheVtNJkhABrTR1",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyPlewPbqSunuNltG/cq1/c1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,8 +28,30 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "# Project 1 - Part 1\n",
+        "Milene Carmes Vallejo\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "tHRDn7uLIOI6"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "## Loading Data"
+      ],
+      "metadata": {
+        "id": "tpBP-V6WSmMN"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -299,6 +322,33 @@
         "df_sales.info()\n",
         "df_sales.head()\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Data Cleaning\n"
+      ],
+      "metadata": {
+        "id": "HoYY0y9nRhP1"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Exploratory Visuals"
+      ],
+      "metadata": {
+        "id": "fowtIlSdRqIL"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Explanatory Visuals"
+      ],
+      "metadata": {
+        "id": "_m9aMn3ZIsj6"
+      }
     },
     {
       "cell_type": "code",
